Fix Solcial card alignment. Add border on selected menu option.

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -60,6 +60,7 @@
 
 .selected {
     background-color: #15161b;
+    border: 2px solid orange;
 }
 
 .wasdIcon {
