--- a/src/components/mainBanner/MainBanner.css
+++ b/src/components/mainBanner/MainBanner.css
@@ -56,7 +56,7 @@
     margin-left: 15px;
 }
 
-.Socials_Container {
+.MainBanner_Socials {
     width: 100%;
     display: flex;
     justify-content: normal;
@@ -91,8 +91,8 @@
         display: none;
     }
 
-    .Socials_Container {
-        justify-content: space-evenly;
+    .MainBanner_Socials {
+        justify-content: center;
     }
 }
 
